--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
         </div>
         <div style="position: ABSOLUTE;max-width: 30px;bottom: 2.5vh;opacity: 0.2;">
           <a href="https://twitter.com/nano2dev" target="_blank" style="display: flex;align-items: center;justify-content: center;color: #FFF;text-decoration: none;font-size: 20px;margin-left: 7px;padding-left: 0px;">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Twitter-logo.svg/2491px-Twitter-logo.svg.png" alt="" style="width: 100%;margin-right: 3px;">nano2dev
+          <img src="assets/github.svg" alt="" style="width: 100%;margin-right: 3px;">nano2dev
           </a>
         </div>
         <!-- Add Pagination -->
