--- a/index.html
+++ b/index.html
@@ -1490,7 +1490,7 @@ color: #e9e9e9;
             this.$forceUpdate()
           },
           github() {
-            var check = window.confirm('Adios.to is Open Source on Github. You can download our entire dataset for free. Click OK to continue.')
+            var check = window.confirm('This website is Open Source and is completly hosted on Github. You can download the entire database and images for free. Click OK to continue to Github.')
             if (check) {
               window.open('https://github.com/305dev/adios', '_blank').focus();
             }
