--- a/index.html
+++ b/index.html
@@ -1672,7 +1672,7 @@
                 this.$forceUpdate()
               },
               github() {
-                var check = window.confirm('This website is Open Source and is completly hosted on Github. You can download the entire database and images for free. Click OK to continue to Github.')
+                var check = window.confirm('This website is not endorsed by any candidate. It is decentralised journalism, hosted on Github. You can download the entire website and dataset for free. Click OK to continue to Github.')
                 if (check) {
                   window.open('https://github.com/305dev/adios', '_blank').focus();
                 }
