--- a/index.html
+++ b/index.html
@@ -1416,7 +1416,7 @@
                             </div>
                         </div>
                         <div class="job-explain" v-if="active">
-                            <div @click="show(person)" class="traitor" v-if="active.accused_treason">Traitor</div>
+                            <!-- <div @click="show(person)" class="traitor" v-if="active.accused_treason">Traitor</div> -->
                             <div class="back" @click="logoClick">
                               <img src="assets/back.svg" alt="" style=" margin-right: 10px; max-width: 40px">
                               BACK
